--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Desarrollador de software apasionado por la innovación y la tecnología educativa.</p>
     <ul>
       <li>🎮 Videojuegos</li>
-      <li>💻 Programación</li>
+      <li>💻 Desarrollador RA</li>
       <li>🌍 Aprender cosas nuevas</li>
     </ul>
     <button onclick="toggleInfo()">Mostrar más</button>
